--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aufräum-Checkliste</title>
+    <title>Checkliste</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -95,7 +95,7 @@
 </head>
 <body>
 
-<h1>Aufräum-Checkliste</h1>
+<h1>Checkliste</h1>
 <div id="languageSwitcher">
     <span>Language:</span>
     <select id="languageSelect">
@@ -123,7 +123,7 @@
             "Statistik": "Statistik",
             "Exportieren als PDF": "Exportieren als PDF",
             "Zurücksetzen": "Zurücksetzen",
-            "Aufräum-Checkliste": "Aufräum-Checkliste",
+            "Checkliste": "Checkliste",
             "Küche": "Küche",
             "Wohnzimmer": "Wohnzimmer",
             "Müll sammeln": "Müll sammeln",
@@ -141,14 +141,14 @@
             "Stunden": "Stunden",
             "Minuten": "Minuten",
             "Sekunden": "Sekunden",
-            "Dateiname": "Aufräum-Checkliste",
+            "Dateiname": "Checkliste",
         },
         en: {
             "Start": "Start",
             "Statistik": "Statistics",
             "Exportieren als PDF": "Export as PDF",
             "Zurücksetzen": "Reset",
-            "Aufräum-Checkliste": "Cleaning Checklist",
+            "Checkliste": "Checklist",
             "Küche": "Kitchen",
             "Wohnzimmer": "Living Room",
             "Müll sammeln": "Collect Trash",
@@ -156,7 +156,7 @@
             "Arbeitsflächen reinigen": "Clean Surfaces",
             "Boden reinigen": "Clean Floor",
             "Müll entfernen": "Remove Trash",
-            "Couchtisch aufräumen": "Tidy Coffee Table",
+            "Couchtisch aufräumen": "Clean up the Coffee Table",
             "Sofa ordnen": "Arrange Sofa",
             "Staub wischen": "Dusting",
             "Start:": "Start:",
